--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.profiles.active=dev
 # mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=lyx010128.
 ###################以下为druid增加的配置###########################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # 下面为连接池的补充设置，应用到上面所有数据源中
