--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Tomcat
 server.tomcat.max-threads=1000
 server.tomcat.min-spare-threads=30
-server.context-path=/shiro-authority-management-system
+server.context-path=/
 server.port=8888
 # dev|pro|test
 spring.profiles.active=dev
