--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,14 +32,13 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;
-druid.stat.slowSqlMillis=5000
+  druid.stat.slowSqlMillis=5000
 # 合并多个DruidDataSource的监控数据
 spring.datasource.useGlobalDataSourceStat=true
 ###############以上为配置druid添加的配置########################################
 
 # Mybatis
-mybatis.type-aliases-package=com.qfedu.dtboot.entity
+mybatis.type-aliases-package=com.csuft.shiro.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.use-column-label=true
@@ -52,4 +51,4 @@ spring.thymeleaf.cache=false
 
 # logback
 logging.config=classpath:logback-spring.xml
-logging.file=c:/logs/dtboot.log
+logging.file=c:/logs/shiro.log
